@@ -61,6 +61,27 @@ sub join : method {
     };
 }
 
+sub get : method {
+    my ($attr, $reader, $writer) = @_;
+    return sub {
+        $reader->($_[0])->[$_[1]]
+    };
+}
+
+sub first : method {
+    my ($attr, $reader, $writer) = @_;
+    return sub {
+        $reader->($_[0])->[0]
+    };
+}
+
+sub last : method {
+    my ($attr, $reader, $writer) = @_;
+    return sub {
+        $reader->($_[0])->[-1]
+    };
+}
+
 1;
 
 __END__
@@ -101,6 +122,12 @@ L<MooseX::AttributeHelpers::Collection::List>.
 =item B<elements>
 
 =item B<join>
+
+=item B<get>
+
+=item B<first>
+
+=item B<last>
 
 =back
 
