@@ -1,6 +1,8 @@
 Revision history for Perl extension MooseX-AttributeHelpers
 
 0.12
+    - Move get from Array to List (gphat)
+    - Add first and last to List (gphat)
     - Doc fixes (gphat)
 0.11 Thurs. Jun 26, 2008
     - add the ability to curry method providers (thanks to jasonmay)
